--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,5 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build --no-restore
-      #- name: Run Tests
+      - name: Run Tests
+        run: dotnet test
