--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+      - name: Setup latest .NET SDKs
+        uses: Elskom/setup-latest-dotnet@v1.1.2
         with:
-          dotnet-version: '9.0.x'
+          VERSION_MAJOR: 9
+
+          
+    #  - name: Setup .NET
+     #   uses: actions/setup-dotnet@v3
+      #  with:
+       #   dotnet-version: '9.0.x'
       - name: Restore dependencies 
         run: dotnet restore
       - name: Build
