--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4.2.0
         with:
-          dotnet-version: 9.x
+          dotnet-version: |
+            9.x
+            7.x
       - name: Restore dependencies 
         run: dotnet restore
       - name: Build
