--- a/StravaRaceAPI/StravaRaceAPI.csproj
+++ b/StravaRaceAPI/StravaRaceAPI.csproj
@@ -15,6 +15,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.15"/>
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.2.efcore.9.0.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0"/>
